# MRI-RayTracer

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  pyproject.toml  test.py
.temp/: main_slang_RunRayMarch-ee9ae5a9.slang  main_slang_clearAdamState-b3cba6fb.slang  main_slang_trainMLP-56a91d63.slang  main_slang_updateParams-f4e07cfc.slang
artifacts/: inr_brats23.npz  inr_brats23_awesome.npz
docs/: Approach.md  DifferentiableRendering.md  Goals.md  Methodology-ROI-Neural-Volumetric-Rendering.md  datasets.yaml  experiments.csv  showcase-plan.md
inr/: data  interactive.ipynb  jax_inr_training_wandb_improved.py  load_inr_checkpoint.py  pyproject.toml  test.ipynb
inr/inr/: dataloader.py  model.py  train.py
inr/viewer/: brats_rt.slang  brats_viewer.py
notebooks/: Final-1.ipynb  MRI_Viewer.ipynb  brats23_inr_distill.ipynb  improved.ipynb  jax_inr_data_split.ipynb  jax_inr_training.py  jax_inr_training_wandb.ipynb  jax_inr_viewer.ipynb  jax_net.ipynb  jax_siren_distill.ipynb  jax_siren_viewer.ipynb  kasra_jax_version.ipynb  neumors_inr.ipynb  neumors_inr_jax.ipynb  nnunet_train_export.ipynb
notebooks/sample_notebook/: interactive.ipynb
scripts/: jax_inr_brats.py  jax_inr_brats_baseline.py  nnunet_train_export.py  read_npz.py  test.py  validate_datasets.py
scripts/.ipynb_checkpoints/: func-checkpoint.slang  interactive-checkpoint.ipynb
scripts/.mesh_rt/: bvh.py  ply_loader.py
scripts/brats/: brats_rt.slang  brats_viewer.py  camera.py  seg_rt.slang  seg_viewer.py
scripts/brats/vdb_viewer/: __init__.py  vdb_app.py  vdb_rt.slang
scripts/mesh_rt/: app.py  mesh_rt.slang
scripts/neural_raycast/: app.py  neural_raymarch.py  neural_raymarch.slang
scripts/raymarch/: app.py  camera.py  raymarch.slang
scripts/raytracer/: raytracer.py  raytracing.slang
scripts/slang_test/: test.py
scripts/test/: adaptive_raymarch.slang  infer_render.py  neural_raymarch_image.slang  neural_shader_model.py  slangpy_runner.py  train.py
scripts/test/outputs/: config.json
scripts/validation/: validate_experiments.py
scripts/volumeRendering/: app.py  volume_render.slang
