[project]
name = "CIS6020"
version = "0.1.0"
description = "CIS6020 Group Project"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pyyaml>=6.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "nibabel>=5.2.1",
    "slang>=0.1.12",
    "slangpy",
    "nnunetv2>=2.6.2",
    "hiddenlayer>=0.3",
    "optax>=0.2.6",
    "flax>=0.12.0",
    "wandb>=0.23.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
ac = []  # Empty extra to trigger Alliance Canada indices

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.pip]
# Only use unsafe-first-match when ac extra is enabled
index-strategy = "unsafe-first-match"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

# Alliance Canada indices - will be used when --extra ac is specified
[[tool.uv.index]]
name = "computecanada-gentoo2020-avx2"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo2020/avx2"
format = "flat"

[[tool.uv.index]]
name = "computecanada-gentoo2020-generic"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo2020/generic"
format = "flat"

[[tool.uv.index]]
name = "computecanada-gentoo-avx2"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo/avx2"
format = "flat"

[[tool.uv.index]]
name = "computecanada-gentoo-generic"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo/generic"
format = "flat"

[[tool.uv.index]]
name = "computecanada-generic"
url = "/cvmfs/soft.computecanada.ca/custom/python/wheelhouse/generic"
format = "flat"

# PyPI indices
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# PyTorch-specific indices (explicit = true means they're only used when explicitly referenced)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
