[project]
name = "CIS6020"
version = "0.1.0"
description = "CIS6020 Group Project"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pyyaml>=6.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "nibabel>=5.2.1",
    "slang>=0.1.12",
    "slangpy",
    "hiddenlayer>=0.3",
    "wandb>=0.23.0",
    "jax===0.5.0",
    "optax>=0.2.5",
    "jax-metal>=0.1.1",
]